[package]
name = "check-sysstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-remote = "0.2.0"
chrono = "0.4.23"
clap = "4.1.1"
libc = "0.2.139"
linked-hash-map = "0.5.6"
num_cpus = "1.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[[remote]]
host = "root@10.10.210.104"

[[bin]]
name = "check-sysstat-cpu"
path = "check-sysstat-cpu.rs"
